test/spec_vectors/func/fail/module_26.wat
(module (func $type-empty-i64 (result i64)))